Updated create.html, added information in current.html, updated TodoForm in forms.py, added try and except to create function in views.py, and added current function in views.py.

--- a/todo/templates/todo/create.html
+++ b/todo/templates/todo/create.html
@@ -13,7 +13,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Add</button>
+        <button type="submit">Add Todo</button>
     </form>
 </body>
 </html>
