--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -9,6 +9,10 @@
     Logged in as {{ user.username }}
 {#    <a href="{% url 'logout' %}">Logout</a>#}
 
+    <a href="{% url 'create' %}">Create</a>
+    <a href="{% url 'completed' %}">Completed</a>
+    <a href="{% url 'current' %}">View All</a>
+
     <form action="{% url 'logoutuser' %}" method="POST">
         {% csrf_token %}
         <button type="Submit">Logout</button>
